Bug 417974 - Displaying to-dos in flat list instead of tree not remembered/persistent
Summary: Displaying to-dos in flat list instead of tree not remembered/persistent
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: todoview (other bugs)
Version First Reported In: 5.13.2
Platform: Manjaro Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-02-21 08:57 UTC by Michael D
Modified: 2025-04-30 12:57 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.4.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michael D 2020-02-21 08:57:49 UTC
It would be nice if korganizer remembered the user's preference to view to-dos as a flat list. Currently when the application is restarted it defaults to tree view.
Comment 1 Bug Janitor Service 2025-04-30 12:35:25 UTC
A possibly relevant merge request was started @ https://invent.kde.org/pim/eventviews/-/merge_requests/118
Comment 2 Allen Winter 2025-04-30 12:56:38 UTC
Git commit 34955afb2e6b61bb37529eb72387e9888ec615de by Allen Winter.
Committed on 30/04/2025 at 12:33.
Pushed by winterz into branch 'master'.

src/todo/todoview.cpp - saveLayout() - also save the flatview setting

In the saveLayout() we need to also save the FlatView config.

M  +1    -0    src/todo/todoview.cpp

https://invent.kde.org/pim/eventviews/-/commit/34955afb2e6b61bb37529eb72387e9888ec615de
Comment 3 Allen Winter 2025-04-30 12:56:57 UTC
Git commit 1a7c3d086fb05ed3c6c6b2902c703d5b83ef5f37 by Allen Winter.
Committed on 30/04/2025 at 12:56.
Pushed by winterz into branch 'release/25.04'.

src/todo/todoview.cpp - saveLayout() - also save the flatview setting

In the saveLayout() we need to also save the FlatView config.


(cherry picked from commit 34955afb2e6b61bb37529eb72387e9888ec615de)

Co-authored-by: Allen Winter <winter@kde.org>

M  +1    -0    src/todo/todoview.cpp

https://invent.kde.org/pim/eventviews/-/commit/1a7c3d086fb05ed3c6c6b2902c703d5b83ef5f37