src/todo/todoview.cpp - saveLayout() - also save the flatview setting

In the saveLayout() we need to also save the FlatView config.

BUG: 417974